--- a/client/app/src/index.css
+++ b/client/app/src/index.css
@@ -1,13 +1,39 @@
-body {
+* {
+  padding: 0;
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.Ap {
+  max-width: 1230px;
+  min-height: 100vh;
+  overflow: hidden;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-shadow: 0 0 35px #eee;
+}
+a {
+  text-decoration: none;
+}
+ul li{
+	list-style:none;
+}
+button{
+	border: none;
+	outline: none;
+	background: transparent;
+	cursor: pointer;
+}
+
+/* ------Header--------- */
+@import url('./components/headers/header.css')
