did Cart component

--- a/client/app/src/index.css
+++ b/client/app/src/index.css
@@ -45,3 +45,6 @@ button{
 
 /* ------Login/Register--------- */
 @import url("./components/mainpages/auth/login.css");
+
+/* ------Cart--------- */
+@import url('./components/mainpages/cart/cart.css');
