--- a/client/app/src/index.css
+++ b/client/app/src/index.css
@@ -48,3 +48,6 @@ button{
 
 /* ------Cart--------- */
 @import url('./components/mainpages/cart/cart.css');
+
+/* ------Categories--------- */
+@import url('./components/mainpages/categories/categories.css')
