Client- Delete Product, delete all products functions

--- a/client/app/src/components/mainpages/products/products.css
+++ b/client/app/src/components/mainpages/products/products.css
@@ -8,4 +8,26 @@
 
 
 /* ----------Product Item------- */
-@import url('../utils/productitem/productitem.css')
+@import url('../utils/productitem/productitem.css');
+
+.delete-all{
+    text-align: right;
+    margin: 20px;
+}
+.delete-all input{
+    height: 25px;
+    width: 25px;
+    transform: translateY(5px);
+    margin: 0 15px;
+}
+.delete-all span{
+    text-transform: uppercase;
+    color: rgb(3, 165, 206);
+    letter-spacing: 1.3px;
+}
+.delete-all button{
+    border: 1px solid crimson;
+    padding: 10px 25px;
+    color: crimson;
+    text-transform: uppercase;
+}
